--- a/index.html
+++ b/index.html
@@ -42,6 +42,24 @@
         </div>
     </nav>
 
+    <main class="container">
+        <div class="row align-items-center mt-5">
+            <div class="col col-12 col-lg-6">
+                <h1 class="text-center text-md-start fs-2">Desenvolvemos os <span class="text-primary">melhores sites do mercado</span>, em
+                    poucos cliques.</h1>
+                <p class="lead text-center text-md-start fs-6 mt-4">Saiba mais sobre o Bootstrap, a ferramenta que facilita a criação de
+                    websites.</p>
+                <div class="d-flex justify-content-center justify-content-md-start gap-4 my-4 ">
+                    <button class="btn btn-primary">Saiba mais</button>
+                    <button class="btn btn-outline-primary ">Nossos clientes</button>
+                </div>
+            </div>
+            <div class="col col-12 col-lg-6">
+                <img src="./assets/computer.png" class="img-fluid p-3 p-lg-0">
+            </div>
+        </div>
+    </main>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
