--- a/index.html
+++ b/index.html
@@ -42,12 +42,15 @@
         </div>
     </nav>
 
+    <!-- CONTEÚDO PRINCIPAL -->
     <main class="container">
         <div class="row align-items-center mt-5">
             <div class="col col-12 col-lg-6">
-                <h1 class="text-center text-md-start fs-2">Desenvolvemos os <span class="text-primary">melhores sites do mercado</span>, em
+                <h1 class="text-center text-md-start fs-2">Desenvolvemos os <span class="text-primary">melhores sites do
+                        mercado</span>, em
                     poucos cliques.</h1>
-                <p class="lead text-center text-md-start fs-6 mt-4">Saiba mais sobre o Bootstrap, a ferramenta que facilita a criação de
+                <p class="lead text-center text-md-start fs-6 mt-4">Saiba mais sobre o Bootstrap, a ferramenta que
+                    facilita a criação de
                     websites.</p>
                 <div class="d-flex justify-content-center justify-content-md-start gap-4 my-4 ">
                     <button class="btn btn-primary">Saiba mais</button>
@@ -59,6 +62,35 @@
             </div>
         </div>
     </main>
+
+    <hr class="text-primary" style="width: 80%; margin: 4em auto 2em;">
+
+    <!-- CARDS -->
+    <section class="container mb-4">
+        <div class="row">
+            <div class="card col-12 col-md-4 border-0 mb-4 mb-md-0">
+                <div class="card-body text-center">
+                    <i class="bi bi-lightning-charge text-primary" style="font-size: 3em;"></i>
+                    <h5 class="card-title my-3">Sites super rápidos</h5>
+                    <p class="card-text text-muted">Nossos sites possuem uma ótima performance, sem travamentos e sem bugs</p>
+                </div>
+            </div>
+            <div class="card col-12 col-md-4 border-0 mb-4 mb-md-0">
+                <div class="card-body text-center">
+                    <i class="bi bi-phone text-primary" style="font-size: 3em;"></i>
+                    <h5 class="card-title my-3">Totalmente responsivos</h5>
+                    <p class="card-text text-muted">Independete do dispositivo, nossos sites se adaptam ao tamanho da tela do usuário, graças as poderoso Bootstrap</p>
+                </div>
+            </div>
+            <div class="card col-12 col-md-4 border-0 mb-4 mb-md-0">
+                <div class="card-body text-center">
+                    <i class="bi bi-palette text-primary" style="font-size: 3em;"></i>
+                    <h5 class="card-title my-3">Personalizado do seu jeito</h5>
+                    <p class="card-text text-muted">O Bootstrap permite que o tema e o layout da página, seja do seu jeito!</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
