feat: Rodapé (footer)

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <hr class="text-primary" style="width: 80%; margin: 4em auto 2em;">
 
     <!-- CARDS -->
-    <section class="container mb-4">
+    <section class="container mb-5">
         <div class="row">
             <div class="card col-12 col-md-4 border-0 mb-4 mb-md-0">
                 <div class="card-body text-center">
@@ -91,6 +91,12 @@
             </div>
         </div>
     </section>
+
+    <footer class="bg-primary text-center py-2">
+        <p class="text-light mb-0">Criado por 
+            <a href="https://www.linkedin.com/in/caio-augusto-cap/" class="text-light">Caio Augusto Pereira</a>
+        </p>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
