--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse bg-light bg-md-none px-3 px-lg-0 pb-3 pb-lg-0 rounded shadow-sm" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -36,7 +36,7 @@
                     </li>
                 </ul>
                 <div class="d-flex" role="search">
-                    <a href="#" class="btn btn-primary">Fale conosco</a>
+                    <a href="#" class="btn btn-primary m-0 m-lg-1">Fale conosco</a>
                 </div>
             </div>
         </div>
@@ -92,6 +92,7 @@
         </div>
     </section>
 
+    <!-- RODAPÉ -->
     <footer class="bg-primary text-center py-2">
         <p class="text-light mb-0">Criado por 
             <a href="https://www.linkedin.com/in/caio-augusto-cap/" class="text-light">Caio Augusto Pereira</a>
