fix: Mudanças em alguns textos da página

--- a/index.html
+++ b/index.html
@@ -48,10 +48,8 @@
             <div class="col col-12 col-lg-6">
                 <h1 class="text-center text-md-start fs-2">Desenvolvemos os <span class="text-primary">melhores sites do
                         mercado</span>, em
-                    poucos cliques.</h1>
-                <p class="lead text-center text-md-start fs-6 mt-4">Saiba mais sobre o Bootstrap, a ferramenta que
-                    facilita a criação de
-                    websites.</p>
+                    poucos cliques!</h1>
+                <p class="lead text-center text-md-start fs-6 mt-4">Não perca a oportunidade de ter um site desenvolvido com Bootstrap</p>
                 <div class="d-flex justify-content-center justify-content-md-start gap-4 my-4 ">
                     <button class="btn btn-primary">Saiba mais</button>
                     <button class="btn btn-outline-primary ">Nossos clientes</button>
@@ -79,14 +77,14 @@
                 <div class="card-body text-center">
                     <i class="bi bi-phone text-primary" style="font-size: 3em;"></i>
                     <h5 class="card-title my-3">Totalmente responsivos</h5>
-                    <p class="card-text text-muted">Independete do dispositivo, nossos sites se adaptam ao tamanho da tela do usuário, graças as poderoso Bootstrap</p>
+                    <p class="card-text text-muted">Independete do dispositivo, nossos sites se adaptam ao tamanho da tela do usuário, graças ao poderoso Bootstrap</p>
                 </div>
             </div>
             <div class="card col-12 col-md-4 border-0 mb-4 mb-md-0">
                 <div class="card-body text-center">
                     <i class="bi bi-palette text-primary" style="font-size: 3em;"></i>
                     <h5 class="card-title my-3">Personalizado do seu jeito</h5>
-                    <p class="card-text text-muted">O Bootstrap permite que o tema e o layout da página, seja do seu jeito!</p>
+                    <p class="card-text text-muted">O Bootstrap permite que o tema e o layout da página, seja do seu jeito</p>
                 </div>
             </div>
         </div>
